# kira-spliceqc

./: .gitignore  Cargo.toml  LICENSE  METRICS.md  PIPELINE.md  README.md
.cargo/: config.toml
resources/genesets/: splicing_genesets.tsv
src/: lib.rs  simd.rs
src/cli/: config.rs  mod.rs  run.rs
src/expression/: cache_writer.rs  index.rs  mmap.rs  mod.rs
src/genesets/: catalog.rs  loader.rs  mod.rs
src/input/: detect.rs  error.rs  h5ad.rs  mod.rs  shared_cache.rs  tenx.rs
src/io/: h5ad.rs  mod.rs  mtx.rs
src/metrics/: mod.rs
src/metrics/splicing_instability/: aggregate.rs  junction.rs  mod.rs  panels.rs  scores.rs
src/model/: assembly_phase.rs  collapse.rs  coupling.rs  cryptic_risk.rs  exon_intron_bias.rs  geneset_activity.rs  imbalance.rs  isoform_dispersion.rs  missplicing.rs  mod.rs  sis.rs  splicing_instability.rs  splicing_noise.rs  timecourse.rs
src/output/: json.rs  mod.rs  pipeline_contract.rs  summary.rs  tsv.rs
src/pipeline/: mod.rs  stage0_input.rs  stage10_assembly_phase.rs  stage11_splicing_noise.rs  stage12_cryptic_risk.rs  stage13_collapse.rs  stage14_timecourse.rs  stage15_splicing_instability.rs  stage1_expression.rs  stage2_genesets.rs  stage3_isoform.rs  stage4_missplicing.rs  stage5_imbalance.rs  stage6_sis.rs  stage7_output.rs  stage8_coupling.rs  stage9_exon_intron_bias.rs
src/stats/: mod.rs  robust.rs
tests/: cli_extended_pipeline.rs  cli_run.rs  pipeline_contract_schema.rs  pipeline_shared_cache.rs  src_inline_bin_cli.rs  stage0_input.rs  stage10_assembly_phase.rs  stage11_splicing_noise.rs  stage12_cryptic_risk.rs  stage13_collapse.rs  stage14_timecourse.rs  stage1_expression.rs  stage2_genesets.rs  stage3_isoform.rs  stage4_missplicing.rs  stage5_imbalance.rs  stage6_sis.rs  stage7_output.rs  stage8_coupling.rs  stage9_exon_intron_bias.rs
