[package]
name = "kira-spliceqc"
description = "Deterministic, explainable splicing QC for single-cell expression data."
version = "0.2.0"
rust-version = "1.95"
edition = "2024"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-spliceqc"
keywords = [
    "bioinformatics",
    "splicing",
    "single-cell",
    "sc-rna",
    "oncology"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::proteomics",
    "command-line-utilities"
]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
ahash = "0.8"
kira-shared-sc-cache = "0.2.1"
kira-scio = { version = "0.2.1", features = ["h5ad"] }
# kira-scio's h5ad feature pulls in `hdf5` (no static), so the project would not
# link without a system HDF5 installation. Force static linkage explicitly.
hdf5-sys = { version = "0.8.1", features = ["static"] }


[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hdf5 = "0.8.1"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

# Keep dev/test binaries small — full debug-info × hdf5-src exhausts the
# Windows linker PDB limit and trashes disk space.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
